<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BES Toolbox</string>
    <string name="activity_ble_ota">BLE OTA</string>
    <string name="activity_spp_ota">SPP OTA</string>
    <string name="activity_main">BES Toolbox</string>
    <string name="activity_bluetooth_scan">BLE SCAN</string>
    <string name="activity_eq_setting">EQ SETTING</string>
    <string name="activity_stress_ble_ota">BLE OTA STRESS</string>
    <string name="activity_stress_spp_ota">SPP OTA STRESS</string>
    <string name="activity_classics_devices_scan">Classics BT SCAN</string>
    <string name="activity_stress_home">STRESS TEST</string>
    <string name="current_device">The selected device:</string>
    <string name="change_device">Change device</string>
    <string name="current_ota_file">Image to upgrade:</string>
    <string name="pick_ota_file">Choose image</string>
    <string name="current_ota_progress">OTA progress:</string>
    <string name="start_ota">Start OTA</string>
    <string name="ota">OTA</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ota_exit_tips">OTA in progress, sure to exit?</string>
    <string name="config_to_save">Parameter</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="config_exist_already">Saving parameter failed, parameters with the same name already exists</string>
    <string name="delete_config_tips">Confirm to delete %s?</string>
    <string name="delete_failed">Deleting failed</string>
    <string name="history_config">History configuration</string>
    <string name="clear">Clear</string>
    <string name="load_file_failed">Loading file failed</string>
    <string name="load_file_successfully">Loading file is successful. Start OTA...</string>
    <string name="connecting_device">Connecting device...</string>
    <string name="connected">Connected</string>
    <string name="connect_failed">Connecting failed</string>
    <string name="connect_reconnect_try">%1$d connecting try</string>
    <string name="disconnected">Disconnected</string>
    <string name="ota_failed">OTA failed</string>
    <string name="ota_successfully">OTA successful</string>
    <string name="pick_File_tips">Choose the image to upgrade</string>
    <string name="pick_device_tips">Choose the device to upgrade</string>
    <string name="bond_none">Pairing failed</string>
    <string name="ota_ing">OTA is on-going...</string>
    <string name="ble_location_permission_tip">Location permission is needed after Android 6.0. Apply the location permission firstly?</string>
    <string name="ble_gps_enable_tip">Location service is needed after Android 6.0. Turn to the setting view to enable this service?</string>
    <string name="discover_services_error">Discovering service failed!</string>
    <string name="player">Player</string>
    <string name="old_ota_profile">Device does not support new OTA version. Use the old OTA version.</string>
    <string name="ota_time_out">OTA timeout. Disconnecting...</string>
    <string name="ota_error_service_uuid">Wrong UUID.</string>
    <string name="delete_music_tips">Delete %s?</string>
    <string name="configing_mtu">MTU being negotiated...</string>
    <string name="config_mtu_successfully">MTU negotiation successful.</string>
    <string name="config_mtu_failed">MTU negotiation failed.</string>
    <string name="min_gain">-24dB</string>
    <string name="max_gain">24dB</string>
    <string name="check">Check</string>
    <string name="eq_right_gain_tip">Right Gain (dB)</string>
    <string name="eq_left_gain_tip">Left Gain (dB)</string>
    <string name="eq_enable">enable</string>
    <string name="eq_disable">disable</string>
    <string name="eq_save">save</string>
    <string name="eq_load">load</string>
    <string name="gain">Gain</string>
    <string name="freq">Freq</string>
    <string name="gain_unit">(dB)</string>
    <string name="freq_unit">(Hz)</string>

    <string name="hex_prefix">0x</string>
    <string name="ota_config_yes">Y</string>
    <string name="ota_config_no">N</string>
    <string name="ota_config_clear_user_data_tip">Clear user data?</string>
    <string name="ota_config_update_bt_addr_tip">Update BT addr?</string>
    <string name="ota_config_update_ble_name_tip">Update BLE name?</string>
    <string name="ota_config_update_ble_addr_tip">Update BLE addr?</string>
    <string name="ota_config_update_bt_name_tip">Update BT name?</string>
    <string name="ok">OK</string>
    <string name="invalid_bt_address">Invalid BT address!</string>
    <string name="invalid_ble_address">Invalid BLE Address!</string>
    <string name="invalid_bt_name">Invalid BT name!</string>
    <string name="invalid_ble_name">Invalid BLE name!</string>
    <string name="load_ota_config_failed">Loading OTA configuration failed!</string>
    <string name="load_ota_config_successfully">Loading OTA configuration is successful. Start OTA configuration synchronization.</string>
    <string name="ota_config_time_out">OTA configuration synchronization timeout</string>
    <string name="ota_config_failed">OTA configuration synchronization failed!</string>
    <string name="pause_failed">Pausing music failed!</string>
    <string name="set_volume_failed">Setting volume failed!</string>
    <string name="replay_failed">Resuming playing failed!</string>
    <string name="play_failed">Starting playing failed!</string>
    <string name="previous_failed">Switching to previous song failed!</string>
    <string name="next_failed">Switching to next song failed!</string>
    <string name="play_time_out">Playing timeout!</string>
    <string name="delete_time_out">Deleting timeout!</string>
    <string name="replay_time_out">Resuming playing timeout!</string>
    <string name="pause_time_out">Pausing music timeout!</string>
    <string name="previous_time_out">Switching to previous song timeout!</string>
    <string name="next_time_out">Switching to next song timeout!</string>
    <string name="set_volume_time_out">Setting volume timeout!</string>
    <string name="get_music_count_and_volume_time_out">Acquiring music numbers and volume information timeout!</string>
    <string name="get_music_name_time_out">Acquiring music information timeout!</string>


    <string name="activity_usb_ota_tools">USB OTA Tools</string>
    <string name="activity_usb_ota_demo">USB OTA Demo</string>
    <string name="usb_current_device_title">Connected device</string>
    <string name="usb_current_no_device">No USB device detected</string>
    <string name="usb_ota_btn">Click to start OTA</string>
    <string name="usb_connect_btn">Connect</string>
    <string name="usb_diconnect_btn">Disconnect</string>
    <string name="usb_ota_tips"></string>
    <string name="usb_no_ota_file">OTA image unselected</string>
    <string name="usb_ota_by_human_title">Switch to manual OTA mode?</string>
    <string name="usb_ota_human_disable_note">The OTA is on-going or no USB device is connected</string>
    <string name="usb_ota_human_mode_message">In manual mode, need to manually control the device to enter the OTA mode</string>
    <string name="usb_ota_fw_version">Firmware version:&#8195;%1$s</string>
    <string name="usb_ota_serial_number">Serial number:&#8195;%1$s</string>
    <string name="usb_ota_boot_type">The image type to be upgraded:&#8195;%1$s</string>
    <string name="usb_ota_is_need_update">Need OTA?&#8195;%1$s</string>
    <string name="usb_no_connect">Click connecting device to acquire</string>
    <string name="usb_info">Current device:&#8195;%1$s\nVID:&#8195;%2$s&#8195;PID:&#8195;%3$s\nVendor:&#8195;%4$s</string>

    <string name="resume_request_verify">Resume request</string>
    <string name="resume_start">Resume start</string>
    <string name="resume_error">Resume error</string>
    <string name="received_size_error">Received size error.</string>
    <string name="segment_verify_error">Segment verify error.</string>
    <string name="breakpoint_error">Breakpoint error.</string>
    <string name="write_flash_offset_error">Write flash offset error.</string>

    <string name="connect_device">CLICK TO CONNECT</string>

    <string name="current_version">current version:</string>

    <string name="pick_ota_file_right">Choose right earbud image</string>
    <string name="pick_ota_file_left">Choose left earbud image</string>
    <string name="both_earbuds_in_one_bin">both earbuds in one bin</string>
    <string name="both_earbuds_in_two_bins">both earbuds in two bin</string>
    <string name="daul_earbuds_ota_apply">daul earbuds ota apply</string>

    <string name="pick_ota_file_daul">Choose daul earbuds image</string>

    <string name="left_earbud_only">left earbud only</string>
    <string name="right_earbud_only">right earbud only</string>

    <string name="right_earbud_image">right earbud image</string>
    <string name="left_earbud_image">left earbud image</string>
</resources>
