<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/usb_connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:minHeight="40dp"
            android:minWidth="100dp"
            android:enabled="false"
            android:text="@string/usb_connect_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_current_device_title"
            android:textSize="14dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/usb_device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/usb_current_no_device"
            />

        <TextView
            android:id="@+id/usb_device_fw_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/usb_ota_fw_version"
            />

        <TextView
            android:id="@+id/usb_device_serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/usb_ota_serial_number"
            />

        <TextView
            android:id="@+id/usb_device_boot_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/usb_ota_boot_type"
            />

        <TextView
            android:id="@+id/usb_device_is_need_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/usb_ota_is_need_update"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        >

        <Button
            android:id="@+id/usb_pick_ota_file"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:minHeight="40dp"
            android:minWidth="100dp"
            android:text="@string/pick_ota_file"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_ota_file"
            android:textSize="14dp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/usb_ota_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/usb_no_ota_file" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_ota_progress"
        android:textSize="14dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usb_ota_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12dp"
            />

        <TextView
            android:id="@+id/usb_ota_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="12dp"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/usb_ota_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_bar"
        />



    <Button
        android:id="@+id/usb_ota_by_human_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:minHeight="40dp"
        android:minWidth="100dp"
        android:enabled="false"
        android:text="@string/usb_ota_btn"
        />

</LinearLayout>