<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white">

    <TextView
        android:textSize="20sp"
        android:id = "@+id/dual_pick_file_left_title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/pick_ota_file_left"
    />

    <TextView
        android:id="@+id/ota_file_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="--"
    />

    <Button
        android:id="@+id/pick_ota_file_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/btn_bg"
        android:minHeight="40dp"
        android:minWidth="100dp"
        android:text="@string/pick_ota_file"
    />

    <TextView
        android:textSize="20sp"
        android:id = "@+id/dual_pick_file_right_title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/pick_ota_file_right"
        />

    <TextView
        android:id="@+id/ota_file_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="--"
    />

    <Button
        android:id="@+id/pick_ota_file_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/btn_bg"
        android:minHeight="40dp"
        android:minWidth="100dp"
        android:text="@string/pick_ota_file"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ok_dual_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />

        <Button
            android:layout_marginLeft="20dp"
            android:id="@+id/cancel_dual_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>