<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_device"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            tools:text="OTA"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">
        <Button
            android:visibility="gone"
            android:id="@+id/pick_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:minHeight="40dp"
            android:minWidth="100dp"
            android:text="@string/change_device"
            />

        <Button

            android:id="@+id/connect_device_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:minHeight="40dp"
            android:minWidth="100dp"
            android:text="@string/connect_device"
        />


    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/current_version"
            android:textSize="20sp"
            />

        <TextView
            android:id = "@+id/current_version_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="16dp"
            />


    <TextView
        android:id = "@+id/current_ota_file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_ota_file"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/ota_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="--"
        />

        <Button
            android:id="@+id/pick_ota_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:minHeight="40dp"
            android:minWidth="100dp"
            android:text="@string/pick_ota_file"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_ota_progress"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/ota_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="--"
        />



    <ProgressBar
        android:id="@+id/ota_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_bar"
        />

    <TextView
        android:id="@+id/ota_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center_horizontal"
        android:text="0%"
        />

    <Button
        android:id="@+id/start_ota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:minHeight="40dp"
        android:minWidth="100dp"
        android:text="@string/start_ota"
        />

    <TextView
        android:id="@+id/update_static"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Statistics：Total count = 0  Failure count = 0"
        android:textSize="16dp"
        android:textColor="#000000"
        />

 </LinearLayout>
</ScrollView>